pd-disaggregation/phase2/backup/rdma-shared-device-plugin.live.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  annotations:
    deprecated.daemonset.template.generation: "1"
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"DaemonSet","metadata":{"annotations":{},"labels":{"app.kubernetes.io/name":"k8s-rdma-shared-dev-plugin","app.kubernetes.io/version":"v1.5.3"},"name":"rdma-shared-dp-ds","namespace":"kube-system"},"spec":{"selector":{"matchLabels":{"app.kubernetes.io/name":"k8s-rdma-shared-dev-plugin"}},"template":{"metadata":{"labels":{"app.kubernetes.io/name":"k8s-rdma-shared-dev-plugin"}},"spec":{"containers":[{"image":"ghcr.io/mellanox/k8s-rdma-shared-dev-plugin:v1.5.3"," [...]
  creationTimestamp: "2026-07-23T03:02:15Z"
  generation: 1
  labels:
    app.kubernetes.io/name: k8s-rdma-shared-dev-plugin
    app.kubernetes.io/version: v1.5.3
  name: rdma-shared-dp-ds
  namespace: kube-system
  resourceVersion: "2030821869"
  uid: d1e0bbe3-b59a-4b44-b36d-dad1ff73ca82
spec:
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app.kubernetes.io/name: k8s-rdma-shared-dev-plugin
  template:
    metadata:
      creationTimestamp: null
      labels:
        app.kubernetes.io/name: k8s-rdma-shared-dev-plugin
    spec:
      containers:
      - image: ghcr.io/mellanox/k8s-rdma-shared-dev-plugin:v1.5.3
        imagePullPolicy: IfNotPresent
        name: k8s-rdma-shared-dp-ds
        resources: {}
        securityContext:
          privileged: true
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /var/lib/kubelet/device-plugins
          name: device-plugin
        - mountPath: /var/lib/kubelet/plugins_registry
          name: plugins-registry
        - mountPath: /k8s-rdma-shared-dev-plugin
          name: config
          readOnly: true
        - mountPath: /dev
          name: devs
      dnsPolicy: ClusterFirst
      hostNetwork: true
      nodeSelector:
        kubernetes.io/os: linux
      priorityClassName: system-node-critical
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - hostPath:
          path: /var/lib/kubelet/device-plugins
          type: ""
        name: device-plugin
      - hostPath:
          path: /var/lib/kubelet/plugins_registry
          type: ""
        name: plugins-registry
      - configMap:
          defaultMode: 420
          items:
          - key: config.json
            path: config.json
          name: rdma-devices
        name: config
      - hostPath:
          path: /dev
          type: ""
        name: devs
  updateStrategy:
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
    type: RollingUpdate
status:
  currentNumberScheduled: 4
  desiredNumberScheduled: 4
  numberAvailable: 4
  numberMisscheduled: 0
  numberReady: 4
  observedGeneration: 1
  updatedNumberScheduled: 4
